airflow/logs/dag_id=idx_pipeline/run_id=manual__2025-06-17T111853.563804+0000/task_id=load_idx/attempt=1.log
[2025-06-17T11:20:40.776+0000] {taskinstance.py:1103} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: idx_pipeline.load_idx manual__2025-06-17T11:18:53.563804+00:00 [queued]>
[2025-06-17T11:20:40.798+0000] {taskinstance.py:1103} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: idx_pipeline.load_idx manual__2025-06-17T11:18:53.563804+00:00 [queued]>
[2025-06-17T11:20:40.799+0000] {taskinstance.py:1308} INFO - Starting attempt 1 of 2
[2025-06-17T11:20:40.840+0000] {taskinstance.py:1327} INFO - Executing <Task(DockerOperator): load_idx> on 2025-06-17 11:18:53.563804+00:00
[2025-06-17T11:20:40.849+0000] {standard_task_runner.py:57} INFO - Started process 1108 to run task
[2025-06-17T11:20:40.854+0000] {standard_task_runner.py:84} INFO - Running: ['***', 'tasks', 'run', 'idx_pipeline', 'load_idx', 'manual__2025-06-17T11:18:53.563804+00:00', '--job-id', '87', '--raw', '--subdir', 'DAGS_FOLDER/idx_pipeline_dag.py', '--cfg-path', '/tmp/tmpix0dar2s']
[2025-06-17T11:20:40.856+0000] {standard_task_runner.py:85} INFO - Job 87: Subtask load_idx
[2025-06-17T11:20:40.967+0000] {task_command.py:410} INFO - Running <TaskInstance: idx_pipeline.load_idx manual__2025-06-17T11:18:53.563804+00:00 [running]> on host 790f4cde8a0c
[2025-06-17T11:20:41.192+0000] {taskinstance.py:1547} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='idx_pipeline' AIRFLOW_CTX_TASK_ID='load_idx' AIRFLOW_CTX_EXECUTION_DATE='2025-06-17T11:18:53.563804+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2025-06-17T11:18:53.563804+00:00'
[2025-06-17T11:20:41.252+0000] {docker.py:334} INFO - Starting docker container from image bigdata-pipeline:latest
[2025-06-17T11:20:42.707+0000] {docker.py:403} INFO - File "/app/idx-load.py", line 381
    """
       ^
SyntaxError: f-string: single '}' is not allowed
[2025-06-17T11:20:43.204+0000] {taskinstance.py:1824} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/docker/operators/docker.py", line 478, in execute
    return self._run_image()
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/docker/operators/docker.py", line 351, in _run_image
    return self._run_image_with_mounts(self.mounts, add_tmp_variable=False)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/docker/operators/docker.py", line 412, in _run_image_with_mounts
    raise AirflowException(f"Docker container failed: {repr(result)} lines {joined_log_lines}")
airflow.exceptions.AirflowException: Docker container failed: {'StatusCode': 1} lines File "/app/idx-load.py", line 381
    """
       ^
SyntaxError: f-string: single '}' is not allowed
[2025-06-17T11:20:43.215+0000] {taskinstance.py:1350} INFO - Marking task as UP_FOR_RETRY. dag_id=idx_pipeline, task_id=load_idx, execution_date=20250617T111853, start_date=20250617T112040, end_date=20250617T112043
[2025-06-17T11:20:43.253+0000] {standard_task_runner.py:109} ERROR - Failed to execute job 87 for task load_idx (Docker container failed: {'StatusCode': 1} lines File "/app/idx-load.py", line 381
    """
       ^
SyntaxError: f-string: single '}' is not allowed; 1108)
[2025-06-17T11:20:43.281+0000] {local_task_job_runner.py:225} INFO - Task exited with return code 1
[2025-06-17T11:20:43.374+0000] {taskinstance.py:2653} INFO - 0 downstream tasks scheduled from follow-on schedule check
